# bril-compiler

./: Cargo.toml  LICENSE  README.md
bril-rs/src/: program.rs
bril2cfg/: Cargo.toml
bril2cfg/src/: main.rs
brilirs/: Cargo.toml
brilirs/src/: basic_block.rs  check.rs  cli.rs  interp.rs  lib.rs  main.rs
cfg/: Cargo.toml
cfg/src/: cfg2src.rs  lib.rs  src2cfg.rs
common-cli/: Cargo.toml
common-cli/src/: lib.rs
dce/: Cargo.toml
dce/src/: main.rs
dummy-pass/: Cargo.toml
dummy-pass/src/: main.rs
gc/: Cargo.toml
gc/src/: error.rs  generation.rs  lib.rs
is-ssa/: Cargo.toml
is-ssa/src/: main.rs
licm/: Cargo.toml
licm/src/: main.rs
local-dce/: Cargo.toml
local-dce/src/: main.rs
lvn/: Cargo.toml
lvn/src/: main.rs
ssa/: Cargo.toml
ssa/src/: coalesce.rs  main.rs
test/bril2cfg/: bitwise_ops.bril  bitwise_ops.cfg  bitwise_ops.copies  bitwise_ops.livevars  bitwise_ops.loops  bitwise_ops.out  branch.cfg  branch.copies  branch.livevars  branch.out  branch_jmp.copies  branch_jmp.livevars  branch_jmp.loops  branch_jmp.out  bsearch.cfg  bsearch.copies  bsearch.livevars  bsearch.loops  bsearch.out  check_primes.bril  check_primes.cfg  check_primes.copies  check_primes.livevars  check_primes.loops  check_primes.out  debug.json  euclid.cfg  euclid.copies  euclid.livevars  euclid.loops  euclid.out  loop.bril  (+46 more)
test/bril2cfg-single/: bitwise_ops.out  branch.out  branch_jmp.out  bsearch.bril  bsearch.out  check_primes.out  euclid.bril  euclid.out  hello_world.bril  hello_world.out  mandelbrot.out  multi_arg.out  multi_jump.out  sum_sq.out  turnt.toml
(+89 files in other folders)
